--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <hr>
                 <a href="index.html">Home</a><br>
                 <a href="About.html">About me</a><br>
-                <a href="selected publications.html">My passions And Hobbies</a><br>
-                <a href="curriculem.html">Curriculem vitae</a>
+                <a href="Selected Publications.html">My passions And Hobbies</a><br>
+                <a href="curriculem vitae.html">Curriculem vitae</a>
                 <hr>
             </td>
             <td>
@@ -155,6 +155,13 @@ I had been learnig my primary school courses and my ex-school courses
             
         </tr>
     </table>
+    <hr>
+    <footer align = "center" >
+        <a href="https://accounts.google.com/ServiceLogin?continue=https://sites.google.com/site/stephentzeinnwu/Home&service=jotspot">Sign in</a> &nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="https://sites.google.com/site/stephentzeinnwu/system/app/pages/recentChanges">recent site activity</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="https://sites.google.com/site/stephentzeinnwu/system/app/pages/reportAbuse">reportAbuse</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="https://sites.google.com/site/stephentzeinnwu/system/app/pages/reportAbuse">printpage</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    </footer>
     
 </body>
 </html>
