adding the pdf file

--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -8,12 +8,17 @@
 <body>
 <table>
     <tr>
-        <td>
-            <h4>cv_2020_2_mekuanint.pdf</h4>
-            <iframe src="file.html" scrolling = "yes" width="700px" height="1000px"></iframe>
+        <td rowspan="10">
+            <h4 align = "center">cv_2020_2_mekuanint.pdf</h4>
+            <embed src="./files/a.pdf#toolbar = 0" type="application/pdf" width="850px" height="600px">
         </td>
         <td>
-            <input aria-posinset="top" type="submit" name="signin" value="Signin">
+            <input bgcolor = "blue" type="submit" name="signin" value="Signin">
+            <h2>cv_2020_2_mekuanint.pdf</h2>
+            <p>Details</p>
+             <p>size</p>
+             <p>150kb</p>
+             <p>view all Details        </p>
         </td>
     </tr>
 </table>
