sign in is added to curriculem vitae

--- a/About.html
+++ b/About.html
@@ -32,8 +32,8 @@
                 <hr>
                 <a href="index.html">Home</a><br>
                 <a href="About.html">About me</a><br>
-                <a href="selected publications.html">Selected Publications</a><br>
-                <a href="curriculem.html">Curriculem vitae</a>
+                <a href="Selected Publications.html">Selected Publications</a><br>
+                <a href="curriculem vitae.html">Curriculem vitae</a>
                 <hr>
             </td>
             <td>
