--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -13,8 +13,10 @@
             <embed src="./files/a.pdf#toolbar = 0" type="application/pdf" width="850px" height="600px">
         </td>
         <td>
-            <input bgcolor = "blue" type="submit" name="signin" value="Signin">
-            <h2>cv_2020_2_mekuanint.pdf</h2>
+            <form action="contacts.html">
+                <input type="submit" name="signin" value="Signin">
+            </form>
+            <h2>cv_2020_2_mekuanint.pdf     </h2>
             <p>Details</p>
              <p>size</p>
              <p>150kb</p>
