embeding the curriculem vitae pdf file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>my past works include in addis Addis Ababa University, OHSU, Trapit, Mayo Clinic, Starkey Laboratories,
                      Honeywell Research, and Medtronic.  For more details (and up-to-date info),
                       check out my <a href="http://www.linkedin.com/in/stephentzeinnwu">LinkedIn profile.</a> </p>
-                <h3>Hobies and day to day activities</h3>
+                <h3>Hobbies and day to day activities</h3>
                 <p>I secured and led an NLM-funded R01 (at OHSU) focused on information retrieval.  
                     I also had an NIAID-funded R21 (with Mayo Clinic) on aggregating patient
                      information over time. There are some foundational interests that guide
