modefied the selections publications part

--- a/Selected Publications.html
+++ b/Selected Publications.html
@@ -37,18 +37,18 @@
                 <hr>
             </td>
             <td>
-                <h2>Selected Publications</h2>
+                <h2>Selected Publications which facionate me</h2>
                 <ul>
-                    <li>Wu, Stephen, Kirk Roberts, Surabhi Datta, Jingcheng Du, Zongcheng Ji, Yuqi Si, Sarvesh Soni, 
-                        Qiong Wang, Qiang Wei, Yang Xiang, Bo Zhao, Hua Xu. Deep Learning in Clinical Natural Language
-                         Processing: A Methodical Review.  
-                        J Am Med Inform Assoc. Volume 27, Issue 3, March 2020, Pages 457–470. [Supplemental Material]</li>
-                    <li>Wu, Stephen, Sijia Liu, Sunghwan Sohn, Sungrim Moon, Chung-il Wi, Young Juhn, 
-                        Hongfang Liu. Modeling Asynchronous Event Sequences with RNNs. 
-                        J Biomed Inform, 83:167-77. Jul 2018. [Author version]</li>
-                    <li>Sohn S, Wi CI, Wu ST, Liu H, Ryu E, Krusemark E, Seabright A, Voge GA, Juhn YJ.
-                         Ascertainment of asthma prognosis using natural language processing from electronic medical records. 
-                        J Allergy Clin Immunol, 141(6):2292-2294.e3. doi: 10.1016/j.jaci.2017.12.1003. Jun 2018</li>
+                    <li>Headfirst HTML CSS and java-script -  it is also the best book for web development and designers 
+                        and also for higher and preparatory school students. Intentional developers 
+                        can use it to learn in small time intervals so it is preferential</li>
+                        <li>Fikir eske mekabir – by by hadis alemayehu which is the history is manily 
+                            about two couples which finished there 
+                            life with life until the last day of their life and cultural behaviour of 
+                            ethiopian people in the past.</li>
+                    <li>java in two semesters – this book is also best book for students 
+                        who want to learn java in small days about basics of java and its usage in 
+                        simple English language.</li>
                     <li>Wu, Stephen T, Sijia Liu, Yanshan Wang, Tamara Timmons, Harsha Uppili, Steven Bedrick, 
                         William Hersh, and Hongfang Liu. Intra-institutional EHR Collections for Patient-Level 
                         Information Retrieval. Journal of the American
@@ -104,9 +104,8 @@
                             and Nigam Shah.  UMLS Term Occurrences in Clinical Notes: A Large-scale Corpus Analysis. 
                             J Am Med Inform Assoc.  Published online first: 4 April, 2012. 
                              doi:10.1136/amiajnl-2011-000744 [slides]
-                            Jonnalagadda, Siddhartha, Trevor Cohen, Stephen Wu, Graciela Gonzalez. 
-                             Enhancing clinical concept extraction with distributional semantics. 
-                             Journal of Biomedical Informatics. Published online first:
+                             Ethiopian History – this book is also my favorite book forever and 
+                             it great intention to give a great history about Ethiopian Civilization. 
                               7 November, 2011. 45(1):129-40, Elsevier, 2012.
                             Schuler, William, Stephen Wu, and Lane Schwartz.  A Framework for Fast 
                             Incremental Interpretation during Speech Decoding. Computational Linguistics,
