--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -9,7 +9,7 @@
 <table>
     <tr>
         <td rowspan="10">
-            <h4 align = "center">cv_2020_2_mekuanint.pdf</h4>
+            <h4>cv_2020_2_mekuanint.pdf</h4>
             <embed src="./files/a.pdf#toolbar = 0" type="application/pdf" width="850px" height="600px">
         </td>
         <td>
