--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -9,8 +9,8 @@
 <table>
     <tr>
         <td rowspan="10">
-            <h4>cv_2020_2_mekuanint.pdf</h4>
-            <embed src="./files/a.pdf#toolbar = 0" type="application/pdf" width="850px" height="600px">
+            <h4 align = "center">cv_2020_2_mekuanint.pdf</h4>
+            <embed src="./files/cv_2_2020_mekuanint.pdf#toolbar = 0" type="application/pdf" width="850px" height="600px">
         </td>
         <td>
             <form action="contacts.html">
