adding resourse files to the index file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li>Engineering and Technology Student <a href="http://www.aau.edu.et/"> Addis Ababa University </a>(Addis Ababa Institute of Technology)</li>
                 </ul>
-                <p>my past works include in addis Addis Ababa University, OHSU, Trapit, Mayo Clinic, Starkey Laboratories,
+                <p>my past educational status include in addis Addis Ababa University, bahirdar, Tilili
                      Honeywell Research, and Medtronic.  For more details (and up-to-date info),
                       check out my <a href="http://www.linkedin.com/in/stephentzeinnwu">LinkedIn profile.</a> </p>
                 <h3>Hobbies and day to day activities</h3>
@@ -92,19 +92,19 @@
                     <td>
                         <h3>Resources</h3>
                 <ul>
-                    <li><a href="http://ctakes.apache.org/">cTAKES:</a>Apache Clinical Text Analysis and Knowledge Extraction System. 
+                    <li><a href="http://ctakes.apache.org/">cisco:</a>Apache Clinical Text Analysis and Knowledge Extraction System. 
                          Originally developed at Mayo Clinic, this is a customizable UIMA-based pipeline 
                          that takes clinical text as input and gives lots 
                         of different clinical IE/NLP output.  I'm a Project Management Committee member.</li>
-                    <li><a href="http://uima.apache.org/">UIMA:</a>Apache's (formerly IBM's) Unstructured Information Management Architecture.  
+                    <li><a href="http://uima.apache.org/">coursera:</a>Apache's (formerly IBM's) Unstructured Information Management Architecture.  
                         Useful for making components somewhat plug-and-play, so that
                          with relative ease you can swap out components for the latest and greatest, 
                          or add new components.</li>
-                    <li><a href="http://www.nltk.org/">NLTK:</a>Natural Language Toolkit.  Easy-to-use toolbox for natural language processing,
+                    <li><a href="http://www.nltk.org/">School Teachers:</a>Natural Language Toolkit.  Easy-to-use toolbox for natural language processing,
                          written in Python.  
                         Includes great introductory material for those new to NLP.  
                         Good stuff, but I am not a developer.</li>
-                    <li><a href="https://keras.io/">keras:</a>The deep learning toolkit that I typically use.</li>
+                    <li><a href="https://keras.io/">w3 School:</a>The deep learning toolkit that I typically use.</li>
                 </ul>
                     </td>
                 </tr>
