Modifing the hoobies and my interesting

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>my past educational status include in addis Addis Ababa University, bahirdar, Tilili
                      Honeywell Research, and Medtronic.  For more details (and up-to-date info),
                       check out my <a href="http://www.linkedin.com/in/stephentzeinnwu">LinkedIn profile.</a> </p>
-                <h3>Hobbies and day to day activities</h3>
+                <h3>Hobbies and Current interests</h3>
                 <p>I secured and led an NLM-funded R01 (at OHSU) focused on information retrieval.  
                     I also had an NIAID-funded R21 (with Mayo Clinic) on aggregating patient
                      information over time. There are some foundational interests that guide
@@ -55,20 +55,18 @@
                 <td></td>
                 <td>
                 <ul>
-                    <li><strong>Computational semantics.</strong>  I am interested in distributional/geometric 
-                        models of semantics and in ontological semantics.  
-                        Each type of representation may provide complementary benefits 
-                        in NLP applications.  I am also interested in compositionality and 
-                        similarity in these semantic frameworks.
+                    <li><strong>Mathematics and Quantom Physics.</strong>  I am interested in linear algebra and geometry 
+                        of Mathematics and I was taking much more time to study Mathematics. As mathematics and physics are
+                        interrelated with the computer Architecture and Software developmet so i is mandatory to be good at 
+                        mathematics and physics in order to be successful in my Software Engineering college course.
+                       
                     </li>
                 <li>
-                   <strong> Clinical information extraction/retrieval.</strong> 
-                   Much of the important information in electronic medical records (EMR) is in 
-                   free-text clinical notes rather than form fields.  
-                   With clinical NLP, this information may be accessed and used 
-                   to improve patient care.  I am also interested in implementing 
-                   the systems that make  this information available to clinicians and 
-                   researchers, hence my interest in information retrieval.
+                   <strong> Software Development and design.</strong> 
+                   Much of the important information in Software development and web design comes from the concepts
+                   of mathematics alegebra and Quantom physics. I am greatly interested in the web design and developer
+                   of android and pc apps(this is not know mastered). I am going to do my best to be a good software developer
+                   that is why I also read mathematics and physics books.
                     </li>
                 </ul>
                 <p>Some of what I've been interested in is embodied in a workshop I organized:
@@ -77,7 +75,7 @@
                 <p>
                     Beginning from my time in Ethiopia (2017-2018), 
                     I began to work on deep learning NLP for Semitic languages.</p>
-                <h3>Teaching</h3>
+                <h3>Learning</h3>
                 <p>In Winter Term 2016, I taught <a href="  http://cslu.ohsu.edu/~wst/nlp-class/syllabus.html">CS 562/662 Natural Language</a>  Processing at OHSU.
                       I wrote a blog post about my experiences, advocating for a new teaching 
                       framework called techied. </p>
