adding to the website the hobbies and current interests and modified it

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li><strong>Mathematics and Quantom Physics.</strong>  I am interested in linear algebra and geometry 
                         of Mathematics and I was taking much more time to study Mathematics. As mathematics and physics are
                         interrelated with the computer Architecture and Software developmet so i is mandatory to be good at 
-                        mathematics and physics in order to be successful in my Software Engineering college course.
+                        mathematics and physics in order to be successful in my Software Engineering college courses.
                        
                     </li>
                 <li>
