my twitter profile is added to the about page

--- a/About.html
+++ b/About.html
@@ -54,8 +54,8 @@
         <tr>
             <td></td>
             <td>
-                <iframe scrolling="yes" width="100%" height="400px" src="https://twitter.com/MekuanintAbebe"
-                title="Twitter settings iframe"></iframe>
+                <iframe scrolling="yes" width="100%" height="600px" src="https://twitter.com/MekuanintAbebe"
+                ></iframe>
             </td>
         </tr>
         </table>
