--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -14,7 +14,7 @@
         </td>
         <td>
             <form action="contacts.html">
-                <input width="100px" height="30px" type="submit" name="signin" value="Signin">
+                <input type="submit" name="signin" value="Signin">
             </form>
             <h2>cv_2020_2_mekuanint.pdf     </h2>
             <p>Details</p>
