I have added the resourse file to the index.html

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                     Beginning from my time in Ethiopia (2017-2018), 
                     I began to work on deep learning NLP for Semitic languages.</p>
                 <h3>Learning</h3>
-                <p>In Winter Term 2016, I taught <a href="  http://cslu.ohsu.edu/~wst/nlp-class/syllabus.html">CS 562/662 Natural Language</a>  Processing at OHSU.
+                <p>In Winter Term 2016, I learned <a href="  http://cslu.ohsu.edu/~wst/nlp-class/syllabus.html">CS 562/662 Natural Language</a>  Processing at OHSU.
                       I wrote a blog post about my experiences, advocating for a new teaching 
                       framework called techied. </p>
-                <p>In Spring 2018, I taught ITSC-5C22 Social Network Analysis at Addis Ababa University,  
+                <p>In Spring 2018, I learned ITSC-5C22 Social Network Analysis at Addis Ababa University,  
                     and wrote another blog post about this very cross-cultural teaching experience.</p>
-                <p>I have also taught <a href="https://github.com/dragonstw/socialnets18">CS 555/655 Analyzing Sequences</a> at OHSU.</p>
+                <p>I have also learned <a href="https://github.com/dragonstw/socialnets18">CS 555/655 Analyzing Sequences</a> at OHSU.</p>
                 <p>Feel free to clone/use/fork my techied repository and build off of it!</p>
                 </td>
             </tr>
