--- a/About.html
+++ b/About.html
@@ -53,9 +53,8 @@
         </tr>
         <tr>
             <td></td>
-            <td>
-                <iframe scrolling="yes" width="100%" height="600px" src="https://twitter.com/MekuanintAbebe"
-                ></iframe>
+            <td><iframe width="850" height="600" src="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw" frameborder="0"></iframe>
+                <a href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">miki</a>
             </td>
         </tr>
         </table>
