I have added the favicon to all the pages

--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="./image/android-icon-72x72.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -41,8 +42,8 @@
                 <p> facts:</p>
                 <ol>
                     <li>I grew up in Bahirdar, Ethipia.</li>
-                    <li>I am very happily unmarried! [pic]</li>
-                    <li>I spoke Mandarin Chinese growing up, am conversational in Amharic,
+                    <li>I am not married! yet[pic]</li>
+                    <li>I spoke Amharic ang awugna growing up, am conversational in English,
                          and can speak a little Spanish and Bahasa Melayu as well.</li>
                     <li>I love making music -- acappella, guitar, violin, piano, and anything else I can get my hands on.</li>
                     <li>I enjoy football, ultimate frisbee, and snowboarding.</li>
@@ -53,9 +54,10 @@
         </tr>
         <tr>
             <td></td>
-            <td><iframe width="850" height="600" src="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw" frameborder="0"></iframe>
-                <a href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">miki</a>
-            </td>
+            <td><iframe width="850" height="600" scrolling="auto" src="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw" frameborder="0"> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></iframe>
+                <a href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">Tweets by MekuanintAbebe
+            </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </td>
         </tr>
         </table>
         
