--- a/Selected Publications.html
+++ b/Selected Publications.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="./image/android-icon-72x72.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -53,25 +54,35 @@
                         William Hersh, and Hongfang Liu. Intra-institutional EHR Collections for Patient-Level 
                         Information Retrieval. Journal of the American
                          Society for Information Science and Technology. doi:10.1002/asi.23884. September 2017.</li>
-                    <li>Wang, Yanshan, Stephen Wu, Dingcheng Li, Saeed Mehrabi, Hongfang Liu. A Part-Of-Speech
-                         term weighting scheme for biomedical information retrieval. 
-                         J Biomed Inform, 63:379-389. Oct 2016.</li>
-                    <li>Wu, Stephen T, Young J Juhn, Sunghwan Sohn, Hongfang Liu. 
-                         Patient-level Temporal Aggregation for Text-based Asthma Ascertainment. J Am Med Inform Assoc.
-                          21(5):876-884, 2014. Errata: there are publisher-introduced typos for p(t) and a(t), 
-                         which should be written with a conditional probability P(... | f(0)=1) </li>
+                    <li>Headfirst android development, A Brain-Friendly Guide,  Dawn Griffi ths & David
+                        Griffi Robsonths. if some one is intersested in the development of mobile application 
+                        the first choice is Headfirst. as any one me also uses greatly for my android development 
+                        course in in my college studies.
+                        </li>
+                    <li>HTML & CSS,Design and Build Websites, Jon Duckett is also my favourite book for ever 
+                        for my web development and design course. it is mandatory for someone who wanted to be
+                        a successful web developer to read this book. it is easy and clarifies every thing with
+                        best explanation.  </li>
                     <li>Wu, Stephen T, Timothy Miller, James Masanz, Matt Coarr, 
                         Scott Halgrim, David Carrell, Cheryl Clark. Negation's not solved: Generalizability 
                         versus Optimizability in clinical natural language processing.  
-                        PLoS One. Nov 2014. [NLP Best Paper, 2015 IMIA Yearbook]</li>
-                    <li>Pathak, Jyotishman, Ashutosh Jadhav, ... Stephen Wu.  Comparative Analysis 
-                        of Online Health Information Search Behavior.  J Med Internet Res. 16(7):e160. Jul 04, 2014.</li>
-                    <li>Dongqing Zhu*, Wu, Stephen T*, Ben Carterette, Hongfang Liu.
-                         Using large clinical corpora for query expansion in text-based cohort identification.  
-                        J Biomed Inform. 49:275–81, June 2014.     *Equal Contribution</li>
-                    <li>Pathak, Jyotishman, ...... Stephen Wu, ... Christopher G Chute. 
-                        Normalization and standardization of electronic health records for
-                         high-throughput phenotyping: the SHARPn consortium. J Am Med Inform Assoc. 20:341-348. 2013.</li>
+                        PLoS One. Nov 2014. 
+                        [NLP Best Paper, 2015 IMIA Yearbook]</li>
+                    <li>php and mysql in web development all in one desk reference for dummies, by Janet Valade with Tricia Ballad
+                        and Bill Ballad is also the best book know I am reading an intersested with that and gives best Information
+                        about both mysql and php web development for in backend and frontend web development. That me  I hope
+                    I will get both the server side and client side web design knowledge in one book.</li>
+                    <li>
+                        I read many philosophical and novel books for my general knowledge. some of them if I wanted to list
+                        some of them include aliweledim, dem bedem, yaltenore liginet, kedit wede matu, efoyita,
+                        keaddimas bashager, haddis, yanna mastawesh and many other books are intersestedme.
+                    </li>
+                    <li>In the next two years I am going to read many books from novel to academic books because books
+                        are the one which gives strength and flexibility to our mind like food gives to all other parts of 
+                        the body. so reading books is the best way to increase our mindset. Reading is not for anly for 
+                        colege examinations but we must read all the time. having a good grade in colege is not like having
+                        great knowlege about that subject.
+                        .</li>
                 </ul>
              </td>
              </tr>
