--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="./image/android-icon-72x72.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mekuanint Abebe</title>
@@ -90,18 +91,15 @@
                     <td>
                         <h3>Resources</h3>
                 <ul>
-                    <li><a href="http://ctakes.apache.org/">cisco:</a>Apache Clinical Text Analysis and Knowledge Extraction System. 
-                         Originally developed at Mayo Clinic, this is a customizable UIMA-based pipeline 
-                         that takes clinical text as input and gives lots 
-                        of different clinical IE/NLP output.  I'm a Project Management Committee member.</li>
+                    <li><a href="http://ctakes.apache.org/">cisco:</a> gives good courses on on all programming languages.
+                          I was learned a Project Management system and c language here and it gives me how to see the problem 
+                          the society and solve it..</li>
                     <li><a href="http://uima.apache.org/">coursera:</a>Apache's (formerly IBM's) Unstructured Information Management Architecture.  
                         Useful for making components somewhat plug-and-play, so that
                          with relative ease you can swap out components for the latest and greatest, 
                          or add new components.</li>
-                    <li><a href="http://www.nltk.org/">School Teachers:</a>Natural Language Toolkit.  Easy-to-use toolbox for natural language processing,
-                         written in Python.  
-                        Includes great introductory material for those new to NLP.  
-                        Good stuff, but I am not a developer.</li>
+                    <li><a href="http://www.nltk.org/">School Teachers:</a>Natural Language Toolkit.  my school Teachers gives me 
+                        a good knowlege even I didint get every where if they didint teach me..</li>
                     <li><a href="https://keras.io/">w3 School:</a>The deep learning toolkit that I typically use.</li>
                 </ul>
                     </td>
