editing the embeded twitter

--- a/Selected Publications.html
+++ b/Selected Publications.html
@@ -33,7 +33,7 @@
                 <hr>
                 <a href="index.html">Home</a><br>
                 <a href="About.html">About me</a><br>
-                <a href="Selected Publications.html">Selected Publications</a><br>
+                <a href="Selected Publications.html">my passions and Hobbies</a><br>
                 <a href="curriculem vitae.html">Curriculem vitae</a>
                 <hr>
             </td>
@@ -90,7 +90,7 @@
                  <td></td>
                  <td>
                      <ul>
-                         <li>Wu, Stephen T, Sunghwan Sohn, Ravikumar K.E., 
+                         <li>Sunghwan Sohn, Ravikumar K.E., 
                              Kavishwar Wagholikar, Siddhartha R. Jonnalagadda, Hongfang Liu, Young J Juhn. 
                              Automated Chart Review for Asthma Cohort Identification using Natural Language Processing:
                               An Exploratory Study.  Ann Allergy Asthma Immunol.  111(5):364-369, November, 2013.</li>
@@ -98,29 +98,13 @@
                             Jonnalagadda S, Cohen T, Wu S, Liu H, Gonzalez G. Using empirically constructed lexical 
                             resources for named entity recognition. Biomed Inform Insights. 6(Suppl 1):17-27. 2013.</li>
                          <li>
-                            Sohn S, Clark C, Halgrim SR, Murphy SP, Jonnalagadda SR, Wagholikar KB, Wu ST, Chute CG, 
-                            Liu H. Analysis of cross-institutional medication description patterns in clinical narratives.
-                             Biomed Inform Insights. 6(Suppl 1):7-16. Epub 2013 Jun 24, 2013. 
-                            Wu, Stephen T, Vinod C Kaggal, Dmitriy Dligach, James J Masanz, Pei Chen, 
-                            Lee Becker, Wendy W Chapman, Guergana K Savova, Hongfang Liu, Christopher G Chute. 
-                             A common type system for clinical natural language processing.  J Biomed Sem. 4:1. 2013.
-                            Sohn S, Torii M, Li D, Wagholikar K, Wu S, Liu H.  A Hybrid Approach to Sentiment 
-                            Sentence Classification in Suicide Notes.  Biomed Inform Insights. 5(Suppl. 1):43-50; 2012.
+                           As I read books and magazines and any other written material I waw also have time
+                           for playing and taking time with friends. I play football at the weekend and basket 
+                           ball every day at the morning. sometimes we play table tennis with my friends. playing 
+                           football gives me a good recreation than every thing. when I feel depresed I went to play 
+                           table tennis.
                          </li>
-                         <li>Jonnalagadda SR, Li D, Sohn S, Wu ST, Wagholikar K, Torii M, Liu H. 
-                             Coreference analysis in clinical notes:
-                              a multi-pass sieve with alternate anaphora resolution modules. J Am Med Inform Assoc.
-                                19(5):867-74. 2012. 
-                            Wu, Stephen, Hongfang Liu, Dingcheng Li, Cui Tao, Mark Musen, Christopher Chute, 
-                            and Nigam Shah.  UMLS Term Occurrences in Clinical Notes: A Large-scale Corpus Analysis. 
-                            J Am Med Inform Assoc.  Published online first: 4 April, 2012. 
-                             doi:10.1136/amiajnl-2011-000744 [slides]
-                             Ethiopian History – this book is also my favorite book forever and 
-                             it great intention to give a great history about Ethiopian Civilization. 
-                              7 November, 2011. 45(1):129-40, Elsevier, 2012.
-                            Schuler, William, Stephen Wu, and Lane Schwartz.  A Framework for Fast 
-                            Incremental Interpretation during Speech Decoding. Computational Linguistics,
-                             35(3):313–343, MIT Press, 2009.</li>
+                       
 
             
                      </ul>
