--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </ul>
                 <p>my past educational status include in addis Addis Ababa University, bahirdar, Tilili
                      Honeywell Research, and Medtronic.  For more details (and up-to-date info),
-                      check out my <a href="http://www.linkedin.com/in/stephentzeinnwu">LinkedIn profile.</a> </p>
+                      check out my</p>
                 <h3>Hobbies and Current interests</h3>
                 <p>I secured and led an NLM-funded R01 (at OHSU) focused on information retrieval.  
                     I also had an NIAID-funded R21 (with Mayo Clinic) on aggregating patient
@@ -91,16 +91,16 @@
                     <td>
                         <h3>Resources</h3>
                 <ul>
-                    <li><a href="http://ctakes.apache.org/">cisco:</a> gives good courses on on all programming languages.
+                    <li><a href="https://www.cisco.com/">cisco:</a> gives good courses on on all programming languages.
                           I was learned a Project Management system and c language here and it gives me how to see the problem 
                           the society and solve it..</li>
-                    <li><a href="http://uima.apache.org/">coursera:</a>Apache's (formerly IBM's) Unstructured Information Management Architecture.  
+                    <li><a href="https://www.coursera.org/">coursera:</a>Apache's (formerly IBM's) Unstructured Information Management Architecture.  
                         Useful for making components somewhat plug-and-play, so that
                          with relative ease you can swap out components for the latest and greatest, 
                          or add new components.</li>
-                    <li><a href="http://www.nltk.org/">School Teachers:</a>Natural Language Toolkit.  my school Teachers gives me 
+                    <li>School Teachers:Natural Language Toolkit.  my school Teachers gives me 
                         a good knowlege even I didint get every where if they didint teach me..</li>
-                    <li><a href="https://keras.io/">w3 School:</a>The deep learning toolkit that I typically use.</li>
+                    <li><a href="https://www.w3schools.com/">w3 School:</a>The deep learning toolkit that I typically use.</li>
                 </ul>
                     </td>
                 </tr>
@@ -139,9 +139,9 @@ I had been learnig my primary school courses and my ex-school courses
                 </table>
                 <h3>Other Links</h3>
                 <ul>
-                    <li><a href=""> Computational Semantics in Clinical Text</a> (CSCT), a workshop that I organized.</li>
-                    <li>Some important <a href="">wisdom</a> .A secondary passion.A secondary passion.</li>
-                    <li><a href="">A secondary passion.</a></li>
+                    <li><a href="https://elevationmap.net/tilili-town-guagusa-shikudad-awi-agew-et-1011135982"> Tillili Town in the map</a> (CSCT), if you wanted to use it fot navigation.</li>
+                    <li>Some important <a href="https://www.google.com/">wisdom</a> .Very best site for me.</li>
+                    <li>health A secondary passion.</li>
                 </ul>
 
                 
