--- a/About.html
+++ b/About.html
@@ -54,9 +54,9 @@
         </tr>
         <tr>
             <td></td>
-            <td><iframe width="850" height="600" scrolling="auto" src="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw" frameborder="0"> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></iframe>
-                <a href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">Tweets by MekuanintAbebe
-            </a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <td>
+            <a class="twitter-timeline" href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">Tweets by MekuanintAbebe</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" href="https://twitter.com/MekuanintAbebe?ref_src=twsrc%5Etfw">Tweets by MekuanintAbebe</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </td>
         </tr>
         </table>
