--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
                 <hr>
                 <a href="index.html">Home</a><br>
                 <a href="About.html">About me</a><br>
-                <a href="Selected Publications.html">Selected Publications</a><br>
+                <a href="Selected Publications.html">My passions and Hobbies</a><br>
                 <a href="curriculem vitae.html">Curriculem vitae</a>
                 <hr>
             </td>
