the final and edited one

--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="./image/android-icon-72x72.png">
+  <link rel="icon" type="image/png" href="./img/android-icon-72x72.png">
 	<title>Mekuanint Abebe</title>
 </head>
 <body>
