--- a/curriculem vitae.html
+++ b/curriculem vitae.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="./img/android-icon-72x72.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mekuanint Abebe</title>
 </head>
 <body>
 <table>
